--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <ul class="wow animate__animated animate__fadeInLeft">
                     <li>
                         <a href="#">
-                            <p class="scale"><img src="/images/about_1.jpg" alt="회사소개"> </p>
+                            <p class="scale"><img src="./images/about_1.jpg" alt="회사소개"> </p>
                             <!-- text -->
                             <!-- .text>h3+p+a.more{MORE} -->
                             <div class="text">
@@ -109,7 +109,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <p class="scale"><img src="/images/about_2.jpg" alt="중앙연구소"></p>
+                            <p class="scale"><img src="./images/about_2.jpg" alt="중앙연구소"></p>
                             <!-- .text>h3+p+a.more{MORE} -->
                             <div class="text">
                                 <h3>중앙연구소</h3>
@@ -120,7 +120,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <p class="scale"><img src="/images/about_3.jpg" alt="투자정보"></p>
+                            <p class="scale"><img src="./images/about_3.jpg" alt="투자정보"></p>
                             <!-- .text>h3+p+a.more{MORE} -->
                             <div class="text">
                                 <h3>투자정보</h3>
